--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
     <title>Covid-19 locations</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">COVID-19 current case locations*</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="https://ethan1141.github.io/covid-19-locations/index.html">Locations <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="https://ethan1141.github.io/covid-19-locations/location.html?loc=">Sites</a>
+      </li>
+    </ul>
+  </div>
+</nav>
     <div class="container-fluid">
       <div class="row">
         <div class="d-flex">
@@ -28,6 +45,12 @@
         </div>
       </div>
     </div>
+
+    <footer>
+      <p>
+        * Data provided by data.nsw.gov.au
+      </p>
+    </footer>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
