added nav and footer

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
     <footer>
       <p>
         * Data provided by data.nsw.gov.au
+
       </p>
+      <p>This work is licensed under a Creative Commons Attribution License.</p>
     </footer>
 
 
