--- a/location.html
+++ b/location.html
@@ -49,7 +49,9 @@
     <footer>
       <p>
         * Data provided by data.nsw.gov.au
+
       </p>
+      <p>This work is licensed under a Creative Commons Attribution License.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
